refactor: modernize codebase to Java 21 idioms and improve type safety
- Add final to 22 concrete classes per project convention
- Replace wildcard imports with explicit imports across 20 files
- Replace Log string concatenation with SLF4J {} placeholders (13 instances)
- Modernize Collections: unmodifiableList -> List.copyOf, Arrays.asList -> List.of
- Modernize File I/O: FileInputStream -> Files.newInputStream, java.io.File -> Path
- Convert 6 context/data classes to records (PingRequestContext, RegistrationRequestContext,
  AuthRequestContext, DumpRequestContext, ResolveUuidRequestContext, ProblemSink.Problem)
- Add @FunctionalInterface to Pipeline, PostProcessor, PlatformFeatures
- Fix unchecked casts: pattern matching instanceof, EnumAdapter raw types,
  adapter Object guards, PlayersArgumentType raw List
- Replace lambda with method reference (Bukkit::isPrimaryThread)
- Remove dangling semicolon, fix e.printStackTrace() -> Log.error
- Replace Stream-to-Iterable idiom with files.filter().toList()